--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Markus Danek",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon --exec node ./bin/www"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
@@ -17,6 +17,8 @@
     "express-session": "^1.12.1",
     "hbs": "^4.0.0",
     "jade": "^1.11.0",
+    "mongodb": "^2.0.49",
+    "mongojs": "^1.4.1",
     "mongoose": "^4.2.7",
     "morgan": "^1.6.1",
     "passport": "^0.3.2",
